Fix user auth pages on mobile

--- a/src/assets/scss/_partials/_forgot-password.scss
+++ b/src/assets/scss/_partials/_forgot-password.scss
@@ -1,10 +1,12 @@
-.login-card-wrapper {
+.forgot-password-wrapper {
   display: flex;
   flex-direction: column;
   align-content: center;
   align-items: center;
   color: #ededed;
-
+  .forgot-password-label {
+    color: black;
+  }
   .card {
     background: #0000007c;
     color: rgba(255, 255, 255, 0.7);
@@ -47,16 +49,5 @@
   }
   svg:hover {
     filter: brightness(125%);
-  }
-}
-
-.password-input-div {
-  position: relative;
-  .password-open-eye {
-    position: absolute;
-    right: 10px;
-    top: 10px;
-    color: gray;
-    cursor: pointer;
   }
 }
